--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "gsap": "^3.12.7",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
