--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.12.7",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "match-sorter": "^8.0.0",
     "motion": "^11.15.0",
     "react": "^18.3.1",
@@ -24,11 +25,13 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
+    "react-lottie-player": "^2.1.0",
     "react-router-dom": "^7.1.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.15.3",
+    "sweetalert2": "^11.16.0",
     "swiper": "^11.2.2"
   },
   "devDependencies": {
